fixed cookie policy not showing above eveyrthing

--- a/css/stylesHome.css
+++ b/css/stylesHome.css
@@ -115,7 +115,7 @@ button:hover {
 .privacy-modal {
     display: none; /* Hidden by default */
     position: fixed;
-    z-index: 1;
+    z-index: 20;
     left: 0;
     top: 0;
     width: 100%;
